Bug 489234 - Replace new Integer(int) with Integer.valueOf() in eclipse.platform.ui plug-ins
org.eclipse.e4.ui.workbench.renderers.swt.cocoa

Change-Id: I9e129ccba47f9208afe9afbcbbfdbfbdd70537e7
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>